--- a/SY1/06-keyMode/MDK-ARM/06-keyMode/06-keyMode.build_log.htm
+++ b/SY1/06-keyMode/MDK-ARM/06-keyMode/06-keyMode.build_log.htm
@@ -21,11 +21,11 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.14.0_KEIL
 Dialog DLL:      TCM.DLL V1.14.4.0
  
 <h2>Project:</h2>
-D:\BearPi\experiment\06-keyMode\MDK-ARM\06-keyMode.uvprojx
+D:\2018119117_EmbeddedSystem\SY1\06-keyMode\MDK-ARM\06-keyMode.uvprojx
 Project File Date:  01/07/2021
 
 <h2>Output:</h2>
-Build target '06-keyMode'
+Rebuild target '06-keyMode'
 assembling startup_stm32l431xx.s...
 compiling main.c...
 compiling gpio.c...
@@ -65,7 +65,7 @@ Package Vendor: ARM
    * Component: CORE Version: 3.40.0
 
 <h2>Collection of Component include folders:</h2>
-  D:\BearPi\experiment\06-keyMode\MDK-ARM\RTE
+  D:\2018119117_EmbeddedSystem\SY1\06-keyMode\MDK-ARM\RTE
   D:\Keil_v5\ARM\PACK\ARM\CMSIS\4.2.0\CMSIS\Include
   D:\Keil_v5\ARM\PACK\Keil\STM32L4xx_DFP\2.5.0
 
